--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18"
