--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
     "@prisma/client": "^5.9.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
