--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "next": "14.1.0",
