--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="postgresql://postgres:root@localhost:5432/recipesnext?schema=public"
+GOOGLE_CLIENT_ID=50757544288-irhmg6hl7q7h503rhlr58bp5mm3pp54a.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_SECRET="klkdejoid549d%5kdd$$"
+NEXTAUTH_URL="http://localhost:3000"
