uploading img to cloudinary

--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ GOOGLE_CLIENT_ID=50757544288-irhmg6hl7q7h503rhlr58bp5mm3pp54a.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET="klkdejoid549d%5kdd$$"
 NEXTAUTH_URL="http://localhost:3000"
+
+# Cloudinary keys
+
+CLOUD_NAME=deueg7n72
+API_KEY=511343297141251
+API_SECRET=1CAL2Ewz939Qez8srvg5HDdEBik
+API_ENVIRONMENT=CLOUDINARY_URL=cloudinary://511343297141251:1CAL2Ewz939Qez8srvg5HDdEBik@deueg7n72
+# SECURE=TRUE
