--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "cloudinary": "^2.0.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
